--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -37,6 +37,7 @@
                         <li class="nav-item">
                             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -45,6 +46,7 @@
 
     </header>
     <h1>hello</h1>
+    <h1> Welcome to DAMS</h1>
 </body>
 
 </html>
